appId: ${APP_ID}
---
- runFlow: _launch-dev-client.yaml
- assertVisible:
    id: journal-list-button
- tapOn:
    id: settings-button
- extendedWaitUntil:
    visible:
      id: back-to-today-button
    timeout: 10000
- tapOn:
    id: appearance-option-dark
- assertVisible:
    id: appearance-option-dark
- tapOn:
    id: back-to-today-button
- assertVisible:
    id: journal-list-button
